--- a/css/Oldgame.css
+++ b/css/Oldgame.css
@@ -90,6 +90,10 @@
 	font-style		: italic;
 }
 
+#OldGamesDiv .radio {
+	border : 0px none;
+}
+
 #OldGamesDiv #L2RightDiv #FromDiv .format,
 #OldGamesDiv #L2RightDiv #ToDiv .format {
 	font-size : 8px;
