--- a/css/Chat.css
+++ b/css/Chat.css
@@ -1,147 +1,33 @@
-#Chat {
-	position		: absolute;
-	bottom			: 0px;
-	right			: 0px;
-	height			: 18px;
-	width			: 100%;
-	/*
-	height			: 4.5mm;
-	*/
-}
+/***********************/
+/****** Chat.css *******/
+/***********************/
 
-/* chat list */
-#Chat #ChatList {	
-	list-style		: none;
-	height			: 15px;
-	margin-left		: 205px;
-	/*
-	margin-left		: 55mm;
-	*/
-}
-
+/* HTML Elemenets */
 #Chat #ChatList li {
 	float			: left;
 	width			: 25%;
 	position		: relative;
+/*	border : 1px solid green;*/
 }
 
-/* chat title */
-#Chat #ChatList .title {
-	background-color: #216778;
-	font-size		: 11px;
-	color 			: #FFF;
-	height			: 16px;
-	text-indent		: 12px;
-	position		: relative;
-	padding-top		: 2px;
-	width			: 100%;
-	/*
-	height			: 4mm;
-	text-indent		: 3mm;
-	*/
-}
-
-#Chat #ChatList .title_selec {
-	background-color	: #FFA200;
-	font-size		: 11px;
-	color 			: #FFF;
-	text-indent		: 12px;
-	height			: 16px;
-	position		: relative;
-	padding-top		: 2px;
-	/*
-	text-indent		: 3mm;
-	height			: 4mm;
-	*/
-}
-
-#Chat #ChatList .title_selec span,
-#Chat #ChatList .title span {
-	font-weight		: bold;
-}
-
-#Chat #ChatInner {
-	padding			: 3px;
-	border			: 1px solid #216778;
-	height			: 145px;
-	position		: relative;
-	/*
-	height			: 38mm;
-	*/
-}
-
-#Chat .minimize {
-	padding-top		: 4px;
-	padding-right		: 15px;
-	width 			: 15px;
-	height			: 2px;
-	/*
-	padding-top		: 1.1%;
-	padding-right		: 7%;
-	width 			: 7%;
-	height			: 15%;
-	*/
-}
-
-#Chat .maximize {
-	padding-right		: 16px;
-	padding-top		: 2px;
-	width 			: 15px;
-	height			: 5px;
-	/*
-	padding-right		: 7%;
-	width 			: 6%;
-	height			: 45%;
-	*/
-}
-#Chat .close {
-	width 			: 10px;
-	height			: 10px;
-	/*
-	width 			: 4%;
-	height			: 55%;
-	*/
-}
-
-/* chat icons */
-#Chat #ChatList .title img,
-#Chat #ChatList .title_selec img {
-	position		: absolute;
-	right			: 4px;
-	top			: 4px;
-	cursor			: pointer;
-	/*
-	right			: 1mm;
-	*/
-}
-
-/* chat box */
-#Chat #ChatList .ChatInside {
-	background-color: #FFF;
-	margin-right	: 2px;
-}
-
-#Chat #ChatList li ul {
+#Chat #ChatList li .MessageList {
 	border			: 1px solid #216778;
 	height			: 118px;
 	overflow		: auto;
+	display			: block;
 	padding			: 0px 5px;
-	/*
-	height			: 31mm;
-	*/
+	position		: relative;
+	width			: 95%;
 }
 
-#Chat #ChatList li ul li {
-	width			: 100%;
+#Chat #ChatList li .MessageList li {
+	float : none;
 	list-style		: none;
-	float			: none;
 	border			: 0px;
 	font-size		: 11px;
-	color			: #216778;
-}
-
-#Chat #ChatList li ul li.error {
-	color			: #FF1111;
+	color			: #216778; 
+	position : relative;
+	width : auto;
 }
 
 #Chat #ChatList li input {
@@ -154,13 +40,102 @@
 	margin-top		: 4px;
 	height			: 16px;
 	top			: 0px;
-	/*
-	margin-top		: 1mm;
-	height			: 4mm;
-	top			: 0mm;
-	*/
 }
 
 #Chat #ChatList strong {
 	font-weight : bold;
+}
+
+#Chat #ChatList .title_selec span,
+#Chat #ChatList .title span {
+	font-weight		: bold;
+}
+
+/* chat icons */
+#Chat #ChatList .title img,
+#Chat #ChatList .title_selec img {
+	position		: absolute;
+	right			: 4px;
+	top			: 4px;
+	cursor			: pointer;
+}
+
+
+/* Class */
+
+/* chat title */
+#Chat #ChatList .title {
+	background-color: #216778;
+	font-size		: 11px;
+	color 			: #FFF;
+	height			: 16px;
+	text-indent		: 12px;
+	position		: relative;
+	padding-top		: 2px;
+	width			: 100%;
+}
+
+#Chat #ChatList .title_selec {
+	background-color	: #FFA200;
+	font-size		: 11px;
+	color 			: #FFF;
+	text-indent		: 12px;
+	height			: 16px;
+	position		: relative;
+	padding-top		: 2px;
+	width			: 100%;
+}
+
+/* chat box */
+#Chat #ChatList .ChatInside {
+	background-color: #FFF;
+	margin-right	: 2px;
+}
+
+#Chat #ChatList li .MessageList li.error {
+	color			: #FF1111;
+}
+
+/* ID */
+#Chat {
+	position		: absolute;
+	bottom			: 0px;
+	right			: 0px;
+	height			: 179px;
+	width			: 100%;
+/*	border : 1px solid blue;*/
+}
+
+/* chat list **/
+#Chat #ChatList {	
+	list-style		: none;
+	height			: 173px;
+	margin-left		: 208px;
+/*	border : 1px solid red;*/
+}
+
+#Chat #ChatInner {
+	padding			: 3px;
+	border			: 1px solid #216778;
+	height			: 145px;
+	position		: relative;
+}
+
+#Chat .minimize {
+	padding-top		: 4px;
+	padding-right		: 15px;
+	width 			: 15px;
+	height			: 2px;
+}
+
+#Chat .maximize {
+	padding-right		: 16px;
+	padding-top		: 2px;
+	width 			: 15px;
+	height			: 5px;
+}
+
+#Chat .close {
+	width 			: 10px;
+	height			: 10px;
 }
