--- a/css/ChallengeMenu.css
+++ b/css/ChallengeMenu.css
@@ -117,13 +117,11 @@
 	font-style	: italic;
 	width		: 40px;
 }
-#ChallengeMenu li #rated.false
-{
+#ChallengeMenu li #rated.false {
 	color		: #777777;
 }
 
-#ChallengeMenu li #rated.true
-{
+#ChallengeMenu li #rated.true {
 	color		: #216778;
 }
 
