--- a/css/Main.css
+++ b/css/Main.css
@@ -25,6 +25,10 @@ p, a, h1, h2, h3, h4, h5, h6, span, strong{
 	/*
 	margin-left		: 55mm;
 	height			: 150mm;
+	
+	margin-left		: 220px;
+	position   : absolute;
+	width		: 70%
 	*/
 
 	margin-left		: 15px;
