Modified: Change padding of text in alert and confirm windows

--- a/css/Window.css
+++ b/css/Window.css
@@ -99,7 +99,7 @@
 }
 
 #AlertDiv #TextDiv {
-	padding-top		:	30px;
+	padding : 30px 20px 0px 20px;
 	position			:	relative;
 	text-align		: center;
 }
@@ -118,7 +118,7 @@
 }
 
 #ConfirmDiv #TextDiv {
-	padding-top		:	30px;
+	padding : 30px 20px 0px 20px;
 	position			:	relative;
 	text-align		: center;
 }
