Added: Number of users and contacts online
../css/Contacts.css : css of online number span
contact/status.js : call function to refresh number of contacts online
interface/contact.js : create elements of online numbers and function to refresh number of contacts online
interface/room.js : refresh online number of users when number of users in general room is refreshed

--- a/css/Contacts.css
+++ b/css/Contacts.css
@@ -76,6 +76,12 @@
 	overflow : hidden;
 }
 
+#Main #Left #Contact #ContactTitle #ContactNumber,
+#Main #Left #Contact #ContactTitle #OnlineNumber {
+	font-weight : normal;
+	font-size : 9px;
+}
+
 /* User list */
 /*
 #Main #Left #Contact #Contacts {
