--- a/css/Window.css
+++ b/css/Window.css
@@ -100,9 +100,9 @@
 }
 
 #AlertDiv #TextDiv {
-	padding : 30px 20px 0px 20px;
+	padding : 30px 35px 0px 35px;
 	position			:	relative;
-	text-align		: center;
+	text-align		: justify;
 }
 
 #AlertDiv #ButtonsDiv {
@@ -119,9 +119,9 @@
 }
 
 #ConfirmDiv #TextDiv {
-	padding : 30px 20px 0px 20px;
+	padding : 30px 35px 0px 35px;
 	position			:	relative;
-	text-align		: center;
+	text-align		: justify;
 }
 
 #ConfirmDiv #ButtonsDiv {
