Modified:	Move some button's action to window file and correct chat input css
modified:   ../css/Chat.css - Add background color to input
modified:   interface/challenge.js - Remove functions associated to open chat and decline challenge buttons
modified:   window/window.js - Add functions to open chat and decline challenge buttons

--- a/css/Chat.css
+++ b/css/Chat.css
@@ -66,6 +66,7 @@
 }
 
 #Chat #ChatList li input {
+	background-color: #FFF;
 	border			: 1px solid #216778;
 	font-size		: 11px;
 	color			: #216778;
