Modified: Css changes
/css/Announce.css : PrivateLabel disabled style
/css/Challenge.css : PrivateLabel disabled style
/css/Rooms.css : Room Input background color
/css/Top.css : Status Select background color
/css/User.css : Rating Select background color
/scripts/interface/announce.js : set disabled style to PrivateLabel
/scripts/interface/challenge.js : set disabled style to PrivateLabel

--- a/css/Announce.css
+++ b/css/Announce.css
@@ -44,6 +44,13 @@
 	font-weight		: bold;
 }
 
+#AnnounceDiv .cx_disabled {
+	font-size	:	10px;
+	margin-right	:	3mm;
+	font-weight		: bold;
+	color : #E0E0E0;
+}
+
 #AnnounceDiv h3 {
 	font-weight		: bold;
 	font-size		: 4mm;
