--- a/css/Challenge.css
+++ b/css/Challenge.css
@@ -46,6 +46,13 @@
 	font-weight		: bold;
 }
 
+#ChallengeDiv .cx_disabled {
+	font-size	:	10px;
+	margin-right	:	3mm;
+	font-weight		: bold;
+	color : #E0E0E0;
+}
+
 #ChallengeDiv h3 {
 	font-weight		: bold;
 	font-size		: 4mm;
