--- a/css/User.css
+++ b/css/User.css
@@ -135,9 +135,7 @@ div .UserList #order_rating
 	text-align              : right;
 	font-size		: 10px;
 	border                  : 1px solid #216778;
-	/*
-	width                   : 56%;
-	*/
+	background-color : #FFF;
 }
 
 div .UserList #order_rating.selected
