Modified: RoomMenuList css changes, add number of users in room in RoomMenuList and possibilite to focus the rooms
css/Rooms.css : RoomMenuList height and hover color
scripts/interface/room.js : Add number of users in RoomMenuList, change onclick function to focus room

--- a/css/Rooms.css
+++ b/css/Rooms.css
@@ -113,13 +113,14 @@
 }
 
 #Main #Left #Rooms #RoomListMenu li:hover {
-	background-color	: #FFF;
+	background-color	: #EAF4F5;
 }
 
 #Main #Left #Rooms #RoomListMenu ul {
 	padding			: 5px 10px;
-	height			: 120px;
+	height			: 110px;
 	overflow		: auto;
+	background-color : #FFF;
 }
 
 #Main #Left #Rooms #RoomListMenu li {
