--- a/css/Profile.css
+++ b/css/Profile.css
@@ -253,7 +253,7 @@
 	border			: 0px;
 	font-weight		: bold;
 	font-size		: 10px;
-	color : #216778;
+	color : #FFF;
 	cursor					: default;
 	margin					: 0px 0px 5px 2px;
 	padding					: 1px 2px;
@@ -270,7 +270,7 @@
 	background-color: #C0C0C0;
 	font-size: 10px;
 	font-weight: bold;
-	color : #216778;
+	color : #FFF;
 	margin: 0 0px 5px 2px;
 	width: 70px;
 	position				: relative;
