--- a/css/Window.css
+++ b/css/Window.css
@@ -77,6 +77,23 @@
 	width						: 70px;
 }
 
+#WindowBox .button_disabled {
+	padding-bottom	: 5px;
+	border					: 0px;
+	font-weight			: bold;
+	border-color : #C0C0C0;
+	background-color: #C0C0C0;
+	font-size			: 10px;
+	color						: #FFF;
+	cursor					: default;
+	margin					: 0px 0px 5px 2px;
+	padding					: 1px 2px;
+	position				: relative;
+	bottom					: 10px;
+	background			: #C0C0C0;
+	width						: 70px;
+}
+
 #WindowBox .button:hover {
 	background		: #FFA200;
 }
